| Bug #35999 | When using the embedded server a wrong error message comes. | ||
|---|---|---|---|
| Submitted: | 11 Apr 2008 14:53 | Modified: | 8 Dec 2008 23:35 |
| Reporter: | Horst Hunger | Email Updates: | |
| Status: | Closed | ||
| Category: | libmysqld | Severity: | S3 (Non-critical) |
| Version: | 5.1.24-rc | OS: | Any |
| Assigned to: | Alexey Botchkov | Target Version: | 6.0 |
| Triage: | D4 (Minor) | ||
[11 Apr 2008 14:53]
Horst Hunger
[11 Apr 2008 20:46]
Sveta Smirnova
Thank you for the report. Verified as described using just query: SET @@global.slave_compressed_protocol = DEFAULT;
[21 Apr 2008 6:36]
Alexey Botchkov
I don't see the slave_compressed_protocol_basic.test in the 5.1 tree - probably it's in the release tree only by now. Still as the 'slave_compressed_protocol' only has sence with the replication (which is not available in the embedded server) i belive we have to add --source include/have_log_bin.inc or --source include/not_embedded.inc Will fix it that way when i see the code.
[16 Jun 2008 4:19]
Alexey Botchkov
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/47883 2656 Alexey Botchkov 2008-06-16 Bug #35999 When using the embedded server a wrong message comes. HAVE_REPLICATION was on for the embedded server as the #define was in wrong place.
[8 Dec 2008 10:19]
Bugs System
Pushed into 5.1.31 (revid:holyfoot@mysql.com-20080616030445-y655mczli0fb0nf5) (version source revid:patrick.crews@sun.com-20081126180318-v685u61mpgoc176x) (pib:5)
[8 Dec 2008 11:30]
Bugs System
Pushed into 6.0.9-alpha (revid:holyfoot@mysql.com-20080616030445-y655mczli0fb0nf5) (version source revid:ingo.struewing@sun.com-20081121151447-dtf2ofz2ys0zqed1) (pib:5)
[8 Dec 2008 23:35]
Paul DuBois
Noted in 5.1.31, 6.0.9 changelog. Setting the slave_compressed_protocol system variable to DEFAULT failed in the embedded server.
[19 Jan 2009 11:24]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090119095303-uwwvxiibtr38djii) (version source revid:tomas.ulin@sun.com-20090108105244-8opp3i85jw0uj5ib) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[19 Jan 2009 13:02]
Bugs System
Pushed into 5.1.31-ndb-6.3.21 (revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl) (version source revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl) (merge vers: 5.1.31-ndb-6.3.21) (pib:6)
[19 Jan 2009 16:08]
Bugs System
Pushed into 5.1.31-ndb-6.4.1 (revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5) (version source revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5) (merge vers: 5.1.31-ndb-6.4.1) (pib:6)
