Bug #35999 When using the embedded server a wrong message comes.

HAVE_REPLICATION was on for the embedded server as the #define was in wrong place.

include/my_global.h:
  Bug #35999 When using the embedded server a wrong message comes.
  
  #define HAVE_REPLICATION moved after the 'include config.h' so it won't be
  enabled with the embedded server.